# luna-rs-deprecated

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  Shuttle.toml
src/: checks.rs  client_state.rs  commands.rs  config.rs  framework.rs  handlers.rs  logging.rs  main.rs  utils.rs
src/checks/: author_in_room_check.rs  bot_in_room_check.rs  bot_is_playing_check.rs  shared_room_check.rs
src/client_state/: client_state.rs  client_state_error.rs  client_state_map.rs
src/commands/: evaluate.rs  handlers.rs  leave.rs  play.rs  playing.rs  queue.rs  skip.rs  stop.rs  track.rs  utils.rs
src/commands/handlers/: queue_handler.rs
src/commands/track/: info.rs  pause.rs  resume.rs  seek.rs  skip.rs
src/commands/utils/: banish.rs  summon.rs
src/handlers/: disconnect_handler.rs  inactivity_handler.rs  queue_handler.rs  reconnect_handler.rs
src/utils/: banish.rs  source_retriever.rs  summon.rs
src/utils/source_retriever/: source.rs  youtube.rs
